<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/svg_back_arrow"
        android:fitsSystemWindows="true"
        android:elevation="4dp"
        app:title="@string/back"
        app:titleTextColor="@color/main_bg_1_text"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subhead"
            android:layout_marginTop="35dp"
            android:text="@string/findback_password"
            android:gravity="center"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="42dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            android:id="@+id/til_phonenumber"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_marginTop="9dp"
                android:id="@+id/tie_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phonenumber"
                android:inputType="phone"
                android:imeActionId="6"
                android:imeActionLabel="@string/send_verifycode"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="11"
                />

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/caption"
            android:layout_marginTop="16dp"
            android:text="@string/sms_tip"
            />
        <Button
            android:id="@+id/btn_next"
            style="@style/normal_button_style"
            android:layout_marginTop="35dp"
            android:text="@string/send_verifycode" />
    </LinearLayout>
</LinearLayout>