<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="context"
            type="com.sire.usermodule.Controller.RegisterVerifyCodeController" />

    </data>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:navigationIcon="@mipmap/back_arrow"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title=" ">

            <TextView
                style="@style/text_title_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/register" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:orientation="vertical">

            <TextView
                style="@style/subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"
                android:id="@+id/tv_phone_number"
                android:gravity="center"
                tool:text="182 1040 9973" />

            <TextView
                style="@style/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:text="@string/already_send_verifycode" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tie_verifycode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/verifycode"
                        android:inputType="phone"
                        android:maxLength="8"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:onTextChanged="@{context::onVerifyCodeTextChanged}"

                        />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    style="@style/body1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retray_send"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/tv_retray"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:onClick="onRetray"
                    />
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@mipmap/see"
                app:passwordToggleTint="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                android:id="@+id/til_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/register"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:onTextChanged="@{context::onPasswordTextChanged}"
                    android:onEditorAction="@{context::onEditorAction}" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                style="@style/normal_button_style"
                android:layout_marginTop="45dp"
                android:onClick="@{context::onRegister}"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
</layout>