<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="context"
            type="com.sire.usermodule.Controller.PasswordResetController" />

    </data>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_password_reset">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:navigationIcon="@drawable/svg_back_arrow"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/main_bg_1_text"
            app:title="@string/back">

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:orientation="vertical">

            <TextView
                style="@style/subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"
                android:gravity="center"
                android:text="重置密码" />

            <TextView
                style="@style/body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="left"
                android:id="@+id/tv_phone_number"
                tool:text="18210409973" />


                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/til_new_passowrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tie_new_passowrd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:onTextChanged="@{context::onVerifyCodeTextChanged}"

                        />

                </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:counterEnabled="true"
                android:id="@+id/til_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/reset_login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:onTextChanged="@{context::onPasswordTextChanged}"
                    android:onEditorAction="@{context::onEditorAction}" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_reset_login"
                style="@style/normal_button_style"
                android:layout_marginTop="45dp"
                android:onClick="@{context::onResetAndLogin}"
                android:text="@string/reset_login" />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
</layout>